// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Modal Default 1`] = `
<div>
  <button
    onClick={[Function]}
    type="button"
  >
    Open modal
  </button>
  <div
    className="Modalstories__ScrollMaker-sc-70fm6s-0 jXCFNb"
  />
  <portal-dummy>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={1}
    />
    <div
      data-focus-lock-disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onScrollCapture={[Function]}
        onTouchMoveCapture={[Function]}
        onWheelCapture={[Function]}
      >
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs ModalInner__Backdrop-sc-1ghkydj-0 eMTTpE"
        >
          <div>
            <div
              className="ModalInner__Header-sc-1ghkydj-3 eETGhq"
            >
              <span
                id="5val-ModalTitle"
              >
                <h2
                  className="Title__H2-sc-1ls1ckn-0 kYuiJU Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ekyJLf"
                >
                  Dialog information
                </h2>
              </span>
            </div>
            <div
              className="Box__StyledDiv-sc-1bfv3i9-0 begqaa"
            >
              <p
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
              >
                Modals should be used with care as they are quite intrusive on the user experience and demand immediate attention (while also blocking all other actions on the site). Always consider if you can solve a problem in another way first before you choose to go with the modal.
              </p>
            </div>
            <div
              className="Box__StyledDiv-sc-1bfv3i9-0 begqaa"
            >
              <p
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
              >
                That being said they are a good tool if you need to grab the users attention, either to communicate something very important or make them take an action before proceeding.
              </p>
            </div>
            <div
              className="Box__StyledDiv-sc-1bfv3i9-0 begqaa"
            >
              <p
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
              >
                Nielsen/Norman has an excellent article about their usage here
              </p>
            </div>
            <p
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
            >
              <a
                href="https:// www.nngroup.com/articles/modal-nonmodal-dialog/"
              >
                https:// www.nngroup.com/articles/modal-nonmodal-dialog/
              </a>
            </p>
            <button
              className="NormalizedButton__Button-ey7f5x-0 ModalInner__CloseButton-sc-1ghkydj-2 iqbhId"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="false"
                className="IconBase__StyledIconBase-sc-10cbji3-0 jQLYEV"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  className="CrossThin__StyledPath-sc-1a8pgle-0 jFUCAe"
                  d="m 1 1 l 22 22 m -22 0 l 22 -22"
                  strokeWidth={2}
                />
                <title>
                  Close this dialog
                </title>
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
  </portal-dummy>
</div>
`;

exports[`Storyshots Molecules | Modal Hide Close button 1`] = `
<div>
  <button
    onClick={[Function]}
    type="button"
  >
    Open modal
  </button>
  <div
    className="Modalstories__ScrollMaker-sc-70fm6s-0 jXCFNb"
  />
  <portal-dummy>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={1}
    />
    <div
      data-focus-lock-disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onScrollCapture={[Function]}
        onTouchMoveCapture={[Function]}
        onWheelCapture={[Function]}
      >
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs ModalInner__Backdrop-sc-1ghkydj-0 eMTTpE"
        >
          <div>
            <div
              className="ModalInner__Header-sc-1ghkydj-3 eETGhq"
            >
              <span
                id="13val-ModalTitle"
              >
                <h2
                  className="Title__H2-sc-1ls1ckn-0 kYuiJU Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ekyJLf"
                >
                  Dialog information
                </h2>
              </span>
            </div>
            <div
              className="Box__StyledDiv-sc-1bfv3i9-0 begqaa"
            >
              <p
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
              >
                The close button in the upper right corner is now hidden because the prop hideClose is true.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
  </portal-dummy>
</div>
`;

exports[`Storyshots Molecules | Modal Integration: Modal with a footer and Button 1`] = `
<div>
  <button
    onClick={[Function]}
    type="button"
  >
    Open modal
  </button>
  <div
    className="Modalstories__ScrollMaker-sc-70fm6s-0 jXCFNb"
  />
  <portal-dummy>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={1}
    />
    <div
      data-focus-lock-disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onScrollCapture={[Function]}
        onTouchMoveCapture={[Function]}
        onWheelCapture={[Function]}
      >
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs ModalInner__Backdrop-sc-1ghkydj-0 eMTTpE"
        >
          <div>
            <div
              className="ModalInner__Header-sc-1ghkydj-3 eETGhq"
            >
              <span
                id="7val-ModalTitle"
              >
                <h2
                  className="Title__H2-sc-1ls1ckn-0 kYuiJU Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ekyJLf"
                >
                  Dialog information
                </h2>
              </span>
            </div>
            <div
              className="FadedScroll__Container-sc-134qq0d-0 xzNjy"
            >
              <div
                className="FadedScroll__Scroller-sc-134qq0d-1 iWgyxh"
              >
                <div
                  className="FadedScroll__Content-sc-134qq0d-2 hzHbxu"
                >
                  <div
                    className="FadedScroll__IntersectionTop-sc-134qq0d-4 crnks"
                  />
                  <div
                    className="Box__StyledDiv-sc-1bfv3i9-0 begqaa"
                  >
                    <p
                      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
                    >
                      Modals should be used with care as they are quite intrusive on the user experience and demand immediate attention (while also blocking all other actions on the site). Always consider if you can solve a problem in another way first before you choose to go with the modal. Modals should be used with care as they are quite intrusive on the user experience and demand immediate attention (while also blocking all other actions on the site). Always consider if you can solve a problem in another way first before you choose to go with the modal.
                    </p>
                  </div>
                  <div
                    className="Box__StyledDiv-sc-1bfv3i9-0 begqaa"
                  >
                    <p
                      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
                    >
                      That being said they are a good tool if you need to grab the users attention, either to communicate something very important or make them take an action before proceeding. That being said they are a good tool if you need to grab the users attention, either to communicate something very important or make them take an action before proceeding.
                    </p>
                  </div>
                  <div
                    className="Box__StyledDiv-sc-1bfv3i9-0 begqaa"
                  >
                    <p
                      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
                    >
                      Modals should be used with care as they are quite intrusive on the user experience and demand immediate attention (while also blocking all other actions on the site). Always consider if you can solve a problem in another way first before you choose to go with the modal. Modals should be used with care as they are quite intrusive on the user experience and demand immediate attention (while also blocking all other actions on the site). Always consider if you can solve a problem in another way first before you choose to go with the modal.
                    </p>
                  </div>
                  <div
                    className="Box__StyledDiv-sc-1bfv3i9-0 begqaa"
                  >
                    <p
                      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
                    >
                      Modals should be used with care as they are quite intrusive on the user experience and demand immediate attention (while also blocking all other actions on the site). Always consider if you can solve a problem in another way first before you choose to go with the modal. Modals should be used with care as they are quite intrusive on the user experience and demand immediate attention (while also blocking all other actions on the site). Always consider if you can solve a problem in another way first before you choose to go with the modal.
                    </p>
                  </div>
                  <div
                    className="Box__StyledDiv-sc-1bfv3i9-0 begqaa"
                  >
                    <p
                      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
                    >
                      Nielsen/Norman has an excellent article about their usage here
                    </p>
                  </div>
                  <p
                    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
                  >
                    <a
                      href="https:// www.nngroup.com/articles/modal-nonmodal-dialog/"
                    >
                      https:// www.nngroup.com/articles/modal-nonmodal-dialog/
                    </a>
                  </p>
                  <div
                    className="FadedScroll__IntersectionBottom-sc-134qq0d-3 bLKvVr"
                  />
                </div>
              </div>
            </div>
            <div
              className="ModalInner__Footer-sc-1ghkydj-4 iPSwuD"
            >
              <div>
                <p
                  className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
                >
                  This is a footer which is a ReactNode, which could e.g. contain a button or only text
                </p>
                <button
                  className="NormalizedButton__Button-ey7f5x-0 Button__StyledButton-lqp9m3-0 kavUlS"
                  onClick={[Function]}
                  type="button"
                >
                  <span>
                    <span
                      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
                    >
                      Button
                    </span>
                  </span>
                </button>
              </div>
            </div>
            <button
              className="NormalizedButton__Button-ey7f5x-0 ModalInner__CloseButton-sc-1ghkydj-2 iqbhId"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="false"
                className="IconBase__StyledIconBase-sc-10cbji3-0 jQLYEV"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  className="CrossThin__StyledPath-sc-1a8pgle-0 jFUCAe"
                  d="m 1 1 l 22 22 m -22 0 l 22 -22"
                  strokeWidth={2}
                />
                <title>
                  Close this dialog
                </title>
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
  </portal-dummy>
</div>
`;

exports[`Storyshots Molecules | Modal Node as Title 1`] = `
<div>
  <div
    className="Modalstories__ScrollMaker-sc-70fm6s-0 jXCFNb"
  />
  <portal-dummy>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={1}
    />
    <div
      data-focus-lock-disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onScrollCapture={[Function]}
        onTouchMoveCapture={[Function]}
        onWheelCapture={[Function]}
      >
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs ModalInner__Backdrop-sc-1ghkydj-0 eMTTpE"
        >
          <div>
            <div
              className="ModalInner__Header-sc-1ghkydj-3 eETGhq"
            >
              <span
                id="15val-ModalTitle"
              >
                <div
                  className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 eJlHQf"
                >
                  <svg
                    aria-hidden="true"
                    className="IconBase__StyledIconBase-sc-10cbji3-0 jQLYEV"
                    focusable="false"
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15 0L3 13.5h7.5L9 24l12-13.5h-7.5z"
                      id="a"
                    />
                  </svg>
                  <h2
                    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ekyJLf"
                  >
                    React Node Title
                  </h2>
                  <svg
                    aria-hidden="true"
                    className="IconBase__StyledIconBase-sc-10cbji3-0 jQLYEV"
                    focusable="false"
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15 0L3 13.5h7.5L9 24l12-13.5h-7.5z"
                      id="a"
                    />
                  </svg>
                </div>
              </span>
            </div>
            <div
              className="Box__StyledDiv-sc-1bfv3i9-0 begqaa"
            >
              <p
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
              >
                Modals should be used with care as they are quite intrusive on the user experience and demand immediate attention (while also blocking all other actions on the site). Always consider if you can solve a problem in another way first before you choose to go with the modal.
              </p>
            </div>
            <div
              className="Box__StyledDiv-sc-1bfv3i9-0 begqaa"
            >
              <p
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
              >
                That being said they are a good tool if you need to grab the users attention, either to communicate something very important or make them take an action before proceeding.
              </p>
            </div>
            <div
              className="Box__StyledDiv-sc-1bfv3i9-0 begqaa"
            >
              <p
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
              >
                Nielsen/Norman has an excellent article about their usage here
              </p>
            </div>
            <p
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
            >
              <a
                href="https:// www.nngroup.com/articles/modal-nonmodal-dialog/"
              >
                https:// www.nngroup.com/articles/modal-nonmodal-dialog/
              </a>
            </p>
            <button
              className="NormalizedButton__Button-ey7f5x-0 ModalInner__CloseButton-sc-1ghkydj-2 iqbhId"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="false"
                className="IconBase__StyledIconBase-sc-10cbji3-0 jQLYEV"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  className="CrossThin__StyledPath-sc-1a8pgle-0 jFUCAe"
                  d="m 1 1 l 22 22 m -22 0 l 22 -22"
                  strokeWidth={2}
                />
                <title>
                  Close this dialog
                </title>
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
  </portal-dummy>
</div>
`;

exports[`Storyshots Molecules | Modal Uncontrolled behavior 1`] = `
<div>
  <div
    className="Modalstories__ScrollMaker-sc-70fm6s-0 jXCFNb"
  />
  <portal-dummy>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={1}
    />
    <div
      data-focus-lock-disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onScrollCapture={[Function]}
        onTouchMoveCapture={[Function]}
        onWheelCapture={[Function]}
      >
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs ModalInner__Backdrop-sc-1ghkydj-0 eMTTpE"
        >
          <div>
            <div
              className="ModalInner__Header-sc-1ghkydj-3 eETGhq"
            >
              <span
                id="11val-ModalTitle"
              >
                <h2
                  className="Title__H2-sc-1ls1ckn-0 kYuiJU Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 ekyJLf"
                >
                  Dialog information
                </h2>
              </span>
            </div>
            <div
              className="Box__StyledDiv-sc-1bfv3i9-0 begqaa"
            >
              <p
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
              >
                Modals should be used with care as they are quite intrusive on the user experience and demand immediate attention (while also blocking all other actions on the site). Always consider if you can solve a problem in another way first before you choose to go with the modal.
              </p>
            </div>
            <div
              className="Box__StyledDiv-sc-1bfv3i9-0 begqaa"
            >
              <p
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
              >
                That being said they are a good tool if you need to grab the users attention, either to communicate something very important or make them take an action before proceeding.
              </p>
            </div>
            <div
              className="Box__StyledDiv-sc-1bfv3i9-0 begqaa"
            >
              <p
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
              >
                Nielsen/Norman has an excellent article about their usage here
              </p>
            </div>
            <p
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
            >
              <a
                href="https:// www.nngroup.com/articles/modal-nonmodal-dialog/"
              >
                https:// www.nngroup.com/articles/modal-nonmodal-dialog/
              </a>
            </p>
            <button
              className="NormalizedButton__Button-ey7f5x-0 ModalInner__CloseButton-sc-1ghkydj-2 iqbhId"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="false"
                className="IconBase__StyledIconBase-sc-10cbji3-0 jQLYEV"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  className="CrossThin__StyledPath-sc-1a8pgle-0 jFUCAe"
                  d="m 1 1 l 22 22 m -22 0 l 22 -22"
                  strokeWidth={2}
                />
                <title>
                  Close this dialog
                </title>
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
  </portal-dummy>
</div>
`;

exports[`Storyshots Molecules | Modal Without header 1`] = `
<div>
  <button
    onClick={[Function]}
    type="button"
  >
    Open modal
  </button>
  <div
    className="Modalstories__ScrollMaker-sc-70fm6s-0 jXCFNb"
  />
  <portal-dummy>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={1}
    />
    <div
      data-focus-lock-disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onScrollCapture={[Function]}
        onTouchMoveCapture={[Function]}
        onWheelCapture={[Function]}
      >
        <div
          className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 hWVWbs ModalInner__Backdrop-sc-1ghkydj-0 eMTTpE"
        >
          <div>
            <div
              className="ModalInner__Header-sc-1ghkydj-3 eETGhq"
            />
            <div
              className="Box__StyledDiv-sc-1bfv3i9-0 begqaa"
            >
              <p
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
              >
                Modals should be used with care as they are quite intrusive on the user experience and demand immediate attention (while also blocking all other actions on the site). Always consider if you can solve a problem in another way first before you choose to go with the modal.
              </p>
            </div>
            <div
              className="Box__StyledDiv-sc-1bfv3i9-0 begqaa"
            >
              <p
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
              >
                That being said they are a good tool if you need to grab the users attention, either to communicate something very important or make them take an action before proceeding.
              </p>
            </div>
            <div
              className="Box__StyledDiv-sc-1bfv3i9-0 begqaa"
            >
              <p
                className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
              >
                Nielsen/Norman has an excellent article about their usage here
              </p>
            </div>
            <p
              className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
            >
              <a
                href="https:// www.nngroup.com/articles/modal-nonmodal-dialog/"
              >
                https:// www.nngroup.com/articles/modal-nonmodal-dialog/
              </a>
            </p>
            <button
              className="NormalizedButton__Button-ey7f5x-0 ModalInner__CloseButton-sc-1ghkydj-2 iqbhId"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="false"
                className="IconBase__StyledIconBase-sc-10cbji3-0 jQLYEV"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  className="CrossThin__StyledPath-sc-1a8pgle-0 jFUCAe"
                  d="m 1 1 l 22 22 m -22 0 l 22 -22"
                  strokeWidth={2}
                />
                <title>
                  Close this dialog
                </title>
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
  </portal-dummy>
</div>
`;
